--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^3.6.5",
     "locomotive-scroll": "^4.0.6",
     "nuxt": "^2.14.6",
+    "nuxt-typeform": "0.0.1",
     "stylelint-processor-html": "^1.0.0",
     "three": "^0.122.0"
   },
