--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.9.0",
-    "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/pwa": "^3.3.4",
     "@nuxtjs/style-resources": "^1.0.0",
-    "@vue/composition-api": "^1.0.0-beta.22",
-    "bootstrap": "^4.5.2",
-    "bootstrap-vue": "^2.17.3",
+    "@vue/composition-api": "^1.0.0-rc.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.8.3",
     "locomotive-scroll": "^4.0.6",
     "nuxt": "^2.14.6",
@@ -39,26 +39,26 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@nuxtjs/eslint-config": "^3.1.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/eslint-config": "^5.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.1.0",
-    "coffee-loader": "^1.0.1",
+    "coffee-loader": "^2.0.0",
     "coffeescript": "^2.5.1",
-    "eslint": "^7.10.0",
+    "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-nuxt": "^1.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "fibers": "^5.0.0",
-    "husky": "^4.3.0",
+    "husky": "^4.3.8",
     "lint-staged": "^10.4.0",
     "nuxt-gsap-module": "^1.1.1",
     "prettier": "^2.1.2",
-    "pug": "^2.0.3",
+    "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.32.5",
-    "sass-loader": "^10.1.0",
-    "stylelint": "^13.8.0",
+    "sass-loader": "^10.1.1",
+    "stylelint": "^13.9.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended-scss": "^4.2.0",
     "stylelint-config-standard": "^20.0.0",
